[package]
name = "moxen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
dotstore = "0.1.0"
jiff = { version = "0.2.19", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["query", "json"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
zip = "7.4.0"
